--- a/blog/themes/smackdown/_config.yml
+++ b/blog/themes/smackdown/_config.yml
@@ -17,7 +17,10 @@ subnav:
   #google: "#"
   #twitter: "#"
   #linkedin: "#"
+url: http://yoursite.com
 root: /blog
+permalink: :year/:month/:day/:title/
+permalink_defaults:
 rss: /atom.xml
 
 # Content
