--- a/blog/themes/smackdown/_config.yml
+++ b/blog/themes/smackdown/_config.yml
@@ -6,10 +6,10 @@ menu:
 
 # SubNav
 subnav:
-  # github: "#"
+  github: "https://wangjian88.github.io"
   # zhihu: "#"
   # mail: "#"
-  # qq: "#"
+  qq: "2929674714"
   # weibo: "#"
   # rss: "#"
   #douban: "#"
@@ -22,7 +22,7 @@ rss: /atom.xml
 
 # Content
 # excerpt_link: 阅读全文
-excerpt_link: more
+excerpt_link: view more
 fancybox: true
 mathjax: true
 
@@ -64,7 +64,7 @@ leancloud_visitors:
 #friends: false
 #开启——
 friends:
-  smackdown: https://github.com/winnerweb/hexo-theme-smackdown
+  smackdown: https://wangjian88.github.io
 #是否开启“关于我”。
 # 不开启——
 aboutme: false
