--- a/blog/themes/smackdown/_config.yml
+++ b/blog/themes/smackdown/_config.yml
@@ -39,7 +39,7 @@ open_in_new: false
 favicon: http://7xkj1z.com1.z0.glb.clouddn.com/head.jpg
 
 #你的头像url
-avatar: http://7xkj1z.com1.z0.glb.clouddn.com/head.jpg
+avatar: http://mypics.zhaopin.com//pic/2016/9/29/547D2CA8D4794667B7C86D6568F42953.jpg
 
 #是否开启分享
 share: true
